# city-wind-simulator

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
api/: jobs.py  main.py  models.py  pyproject.toml  simulation.py
api/routes/: map_texture.py  predict.py  presets.py  results.py  simulate.py
assets/presets/: chicago.glb  chicago.h5  manhattan.glb  manhattan.h5  san_francisco.glb  san_francisco.h5  tokyo.glb  tokyo.h5
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  lz4js.d.ts
frontend/src/api/: client.ts
frontend/src/components/: ComfortMap.tsx  PresetSelector.tsx  Streamlines.tsx  Viewport3D.tsx  WindControls.tsx
frontend/src/store/: store.ts
frontend/src/types/: index.ts
geometry/: osm_tiles.py  overture_mesh.py  pyproject.toml
simulation/: verify_results.py
simulation/lbm_py/: pyproject.toml
simulation/lbm_py/dev/: benchmark.py  d2q9.py  d3q19.py  visualize.py
simulation/lbm_py/lbm/: preprocess.py  run_cuda.py
simulation/src/: .clangd  CMakeLists.txt  build.bat  lattice_constants.cuh  lbm_kernels.cu  lbm_kernels.cuh  main.cu
surrogate/: .gitignore  pyproject.toml
surrogate/surrogate/: __init__.py  config.py
surrogate/surrogate/data/: dataset.py  generate.py
surrogate/surrogate/evaluation/: benchmark.py  metrics.py
surrogate/surrogate/inference/: predictor.py
surrogate/surrogate/model/: __init__.py  fno3d.py  layers.py
surrogate/surrogate/training/: losses.py  train.py
